# hifimap

./: CMakeLists.txt  LICENCE  README.md
include/hifimap/: minimizer_engine.hpp
src/: main.cpp  minimizer_engine.cpp
test/: minimizer_engine_test.cpp
test/data/: paf_coverage.py  reads_generator.cpp  reference_generator.cpp
